Fixed form in dark theme

--- a/reportstary.html
+++ b/reportstary.html
@@ -116,7 +116,7 @@
     </nav>
 
   </header>
-  <div class=" flex flex-col items-center mb-4">
+  <div class=" flex flex-col items-center mb-4 container px-5 py-24 bg-donate bg-opacity-80 mx-auto card backdrop-blur-sm bg-amber-700">
     <div class="info my-4 mt-36 max-w-[625px]">
       <h1 id="title">Report any Critical stray animal to the nearest Animal Care centres</h1>
       <p id="description">The details you provide with this form will be used to reach the nearest authority at the
