Contact Section body color changed , now it looks good.
#1846  solved.

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </section>
   <!-- About session  html starts from here -->
 
-  <section class="bg-white dark:bg-gray-900 b_1 shadow-2xl">
+  <section class="bg-white dark:bg-gray-800 b_1 shadow-2xl">
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
       <p id="About"></p>
       <h2
@@ -579,10 +579,11 @@
   </section>
   <!-- style="opacity: 0; transform: translateX(50px); transition: opacity 1s ease, transform 1s ease;"   -->
   <!--     Contact us section html starts from here -->
-  <section id="contact" class="dark:bg-gray-900 b_1 pt-40 pb-20">
+  <section id="contact" class="dark:bg-gray-800 b_1 pt-40 pb-20">
     <div class="w-full contact-form-container mx-auto max-w-screen-md" id="contactFormContainer">
       <form action="https://formspree.io/f/xayaokzl" method="POST"
-        class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10">
+      class="bg-black bg-opacity-75 rounded-md shadow-md hover:shadow-lg px-8 pt-8 pb-10 border border-gray-300">
+
         <p id="contact"></p>
 
 
