--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
         <form id="subscription-form">
 
           <div class="space-y-2" style="color:#f1f4f9">
-            <h3 class="text-2xl text-center" style="color:#f1f5f9">Subscribe to our newsletter</h3>
+            <h3 class="text-xl text-center" style="color:#f1f5f9">Subscribe to our newsletter</h3>
 
             <div class="text-md">
               Get the latest news and updates delivered straight to your inbox.
