--- a/index.html
+++ b/index.html
@@ -1,6 +1,38 @@
 
 <html lang="en" class="dark">
 
+<style>
+   .hover-underline-animation {
+            display: inline-block;
+            position: relative;
+            color: yellow;
+            font-family: 'Roboto', sans-serif;
+            font-weight: bold;
+            text-transform: uppercase;
+            text-decoration: none;
+        }
+
+        .hover-underline-animation::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: yellow;
+            transform-origin: bottom right;
+            transition: transform 0.25s ease-out;
+        }
+
+        .hover-underline-animation:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+        }
+
+
+</style>
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -201,7 +233,7 @@
   </section>
   <!-- About session  html starts from here -->
 
-  <section class="bg-white dark:bg-gray-900 b_1 shadow-2xl">
+  <section class="bg-white dark:bg-gray-900 b_1 shadow-2xl" style="background-color: rgb(157, 97, 62);">
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
       <p id="About"></p>
       <h2
@@ -223,13 +255,14 @@
       </p>
       <a href="./volunteer.html" class="block mx-auto w-fit ">
         <button
-          class="inline-flex items-center hover:bg-amber-800 border-0 py-2 lg:py-2 px-2 focus:outline-none text-white font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform bg-transparent ">
-          Become Volunteer
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
-        </button>
+  class="inline-flex items-center border-1 py-2 lg:py-2 px-2 focus:outline-none text-white font-bold rounded text-base mt-4 md:mt-0 bg-red-500 transition-transform transition-shadow duration-300 ease-in-out transform hover:scale-105 hover:bg-red-600 hover:shadow-lg">
+  Become Volunteer
+  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+    class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
+    <path d="M5 12h14M12 5l7 7-7 7"></path>
+  </svg>
+</button>
+
       </a>
 
     </div>
