--- a/reportstary.html
+++ b/reportstary.html
@@ -116,13 +116,15 @@
     </nav>
 
   </header>
-  <div class=" flex flex-col items-center mb-4 container px-5 py-24 bg-donate bg-opacity-80 mx-auto card backdrop-blur-sm bg-amber-700">
+
+  <!-- Report Section Start -->
+  <div class=" flex flex-col items-center mb-4 container px-5 py-24 bg-donate bg-opacity-80 mx-auto card backdrop-blur-sm bg-transparent">
     <div class="info my-4 mt-36 max-w-[625px]">
       <h1 id="title">Report any Critical stray animal to the nearest Animal Care centres</h1>
       <p id="description">The details you provide with this form will be used to reach the nearest authority at the
         location of the stray animal.</p>
     </div>
-    <form class="flex flex-col  md:w-2/3 max-w-[775px] w-auto sm:mx-6 mx-2" id="survey-form"
+    <form class="flex flex-col  md:w-2/3 max-w-[775px] w-auto sm:mx-6 mx-2 bg-slate-100" id="survey-form"
       action="https://formspree.io/f/xayaokzl" method="POST">
       <div class="form-group mb-2">
         <label for="name">Name
@@ -226,6 +228,7 @@
 
     </form>
   </div>
+  <!-- Report Section End Here -->
 
 
   <dialog id="popup" class="popup border-2 border-green-500" style="display:none">
