--- a/volunteer.html
+++ b/volunteer.html
@@ -69,7 +69,7 @@
                 <ul
                     class="w-[100vw] h-1/2 lg:text-[18px] top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
                     <li><a href="index.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+                            class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
                     </li>
 
                     <li><a
@@ -82,19 +82,19 @@
                     </li>
                     
                     <li><a href="blog.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+                            class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
                     </li>
                     <li><a href="donate.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
+                            class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
                             Animals</a></li>
                     <li>
                         <a
                             href="./volunteer.html"
-                            class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
+                            class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                             >Support Us</a>
                     </li>
                     <li><a href="reportstary.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
+                            class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
                             Report</a>
                     </li>
 
@@ -282,7 +282,7 @@
           <div class="text-2xl">Follow us on</div>
           <div class="flex mt-2 flex-row space-x-3 my-0">
             <div class="hover:scale-110 transition-all">
-              <a href="#" class="w-5 ml-3">
+              <a href="#" class="w-10 ml-3 mr-3">
                 <!-- Facebook icon -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
