Fix alignment and hover transition for 'Support Us' and 'Contact Us' buttons in navbar

--- a/blog.html
+++ b/blog.html
@@ -88,9 +88,8 @@
               Report</a>
           </li>
           <li>
-            <a href="./index.html#contact">
-              <button
-                class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform">
+            <a href="./index.html#contact" class="nav-item">
+              <button id= "blogcontact-us" class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform">
                 Contact Us
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
