--- a/index.html
+++ b/index.html
@@ -107,23 +107,19 @@
                 >Donate</a
               >
             </li>
-            
             <li>
-
               <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
-              <a @mouseover="open = true" class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full">
-                Support Us
-                <svg xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="mt-1">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-                </svg>
-              </a>
-              <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-                <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
+                <a @mouseover="open = true" class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full">
+                  Support Us
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="ml-1 mt-1">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                  </svg>
+                </a>
+                <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl transition-all duration-300">
+                  <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
+                </div>
               </div>
-              </div>
-
             </li>
-
             <li>
               <a
                 href="./reportstary.html"
@@ -131,11 +127,11 @@
                 >SOS Report</a
               >
             </li>
-            <li>
-              <a href="#contact">
-                <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
-                >
+             <li>
+
+              <a href="#contact" class="nav-item">
+                 <button id="contactus-button"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform">
                   Contact Us
                   <svg
                     fill="none"
@@ -151,6 +147,7 @@
                 </button>
               </a>
             </li>
+            
             <li>
               <a id="theme-toggle">
                 <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
