Fixed text Visiblity in Footer Section of several pages

--- a/news.html
+++ b/news.html
@@ -259,7 +259,7 @@
 					</a>
 				</div>
 				<div>
-					<div class="space-y-2">
+					<div class="space-y-2" style="color:#f1f4f9">
 						<h3 class="text-2xl">Adopt a pet</h3>
 						<div>Give life to an animal in need</div>
 					</div>
@@ -268,7 +268,7 @@
 
 			<!-- Subscribe column -->
 			<div class="md:flex flex-col hidden text-center items-center flex-1">
-				<div class="space-y-2">
+				<div class="space-y-2" style="color:#f1f4f9">
 					<h3 class="text-2xl">Subscribe to our newsletter</h3>
 					<div class="text-md">
 						Get the latest news and updates delivered straight to your inbox.
